Update api definition
add idle filter to devices route
